--- a/roles/tomcat/tasks/tomcat-setup-RedHat.yml
+++ b/roles/tomcat/tasks/tomcat-setup-RedHat.yml
@@ -77,7 +77,8 @@
      prompt: "startup or stop servers? [default: startup] "
      private: no
      default: 'startup'
-
+  tasks:
+    
   - name: "{{ select }} tasks starting"
     shell: nohup "./{{ select }}.sh"
     args:
