--- a/tomcat-setup.yml
+++ b/tomcat-setup.yml
@@ -10,5 +10,6 @@
     ui_manager_pass: Str0ngManagerP@ssw3rd      # UI manager user password
     ui_admin_username: admin                    # User who can access bpth manager and admin UI sections
     ui_admin_pass: Str0ngAdminP@ssw3rd          # UI admin password
+    instance: et
   roles:
     - tomcat
