--- a/roles/tomcat/tasks/tomcat-setup-RedHat.yml
+++ b/roles/tomcat/tasks/tomcat-setup-RedHat.yml
@@ -19,36 +19,36 @@
   vars:
     ansible_python_interpreter: /usr/bin/python2.7
 
-- name: Add '{{ remote_user }}'  group
+- name: Add "{{ remote_user }}"  group
   group:
-    name: '{{ remote_user }}'
+    name: "{{ remote_user }}"
 
-- name: Add '{{ remote_user }}' user
+- name: Add "{{ remote_user }}" user
   user:
-    name: '{{ remote_user }}'
-    group: '{{ remote_user }}'
-    home: '{{ instance_dir }}'
+    name: "{{ remote_user }}"
+    group: "{{ remote_user }}"
+    home: "{{ tomcat_dir }}"
     createhome: no
     system: yes
 
 - name: Download Tomcat
   get_url:
-    url: '{{ tomcat_archive_url }}'
-    dest: '{{ tomcat_archive_dest }}'
+    url: "{{ tomcat_archive_url }}"
+    dest: "{{ tomcat_archive_dest }}"
 
 - name: Create a tomcat directory
   file:
-    path: '{{ instance_dir }}'
+    path: "{{ tomcat_dir }}"
     state: directory
-    owner: '{{ remote_user }}'
-    group: '{{ remote_user }}'
+    owner: "{{ remote_user }}"
+    group: "{{ remote_user }}"
 
 - name: Extract tomcat archive
   unarchive:
-    src: '{{ tomcat_archive_dest }}'
-    dest: '{{ instance_dir }}'
-    owner: '{{ remote_user }}'
-    group: '{{ remote_user }}'
+    src: "{{ tomcat_archive_dest }}"
+    dest: "{{ tomcat_dir }}"
+    owner: "{{ remote_user }}"
+    group: "{{ remote_user }}"
     remote_src: yes
     extra_opts: '--strip-components=1'
     creates: '{{ tomcat_dir }}/bin'
@@ -56,25 +56,25 @@
 - name: Copy tomcat variable file setenv.sh
   template:
     src: templates/setenv.sh
-    dest: '{{ tomcat_dir }}/bin'
+    dest: "{{ tomcat_dir }}/bin"
 
 - name: Copy server.xml
   template:
     src: templates/server.xml
-    dest: '{{ tomcat_dir }}/conf'
+    dest: "{{ tomcat_dir }}/conf"
 
 - name: Set UI access credentials
   template:
     src: tomcat-users.xml.j2
-    dest: '{{ tomcat_dir }}/conf/tomcat-users.xml'
+    dest: "{{ tomcat_dir }}/conf/tomcat-users.xml"
 
 - name: Allow access to Manager and Host Manager apps from any IP
   template:
     src: context.xml.j2
     dest: "{{ item }}"
   with_items:
-    - '{{ tomcat_dir }}/webapps/host-manager/META-INF/context.xml'
-    - '{{ tomcat_dir }}/webapps/manager/META-INF/context.xml'
+    - "{{ tomcat_dir }}/webapps/host-manager/META-INF/context.xml"
+    - "{{ tomcat_dir }}/webapps/manager/META-INF/context.xml"
 #-------------------------------------------------------------------------------#
 # 톰캣 시작 또는 중지
   vars_prompt:
