--- a/roles/tomcat/tasks/tomcat-setup-RedHat.yml
+++ b/roles/tomcat/tasks/tomcat-setup-RedHat.yml
@@ -23,14 +23,6 @@
   group:
     name: "{{ remote_user }}"
 
-- name: Add "{{ remote_user }}" user
-  user:
-    name: "{{ remote_user }}"
-    group: "{{ remote_user }}"
-    home: "{{ tomcat_dir }}"
-    createhome: no
-    system: yes
-
 - name: Download Tomcat
   get_url:
     url: "{{ tomcat_archive_url }}"
@@ -50,45 +42,41 @@
     owner: "{{ remote_user }}"
     group: "{{ remote_user }}"
     remote_src: yes
-    extra_opts: '--strip-components=1'
-    creates: '{{ tomcat_dir }}/bin'
-#------------------------------------------------------------------------------#
+    extra_opts: "--strip-components=1"
+    creates: "{{ tomcat_dir }}/bin"
+
 - name: Copy tomcat variable file setenv.sh
   template:
     src: templates/setenv.sh
-    dest: "{{ tomcat_dir }}/bin"
+    dest: "{{ tomcat_dir }}/bin/setenv.sh"
 
 - name: Copy server.xml
   template:
     src: templates/server.xml
-    dest: "{{ tomcat_dir }}/conf"
+    dest: "{{ tomcat_dir }}/conf/server.xml"
 
 - name: Set UI access credentials
   template:
-    src: tomcat-users.xml.j2
+    src: templates/tomcat-users.xml.j2
     dest: "{{ tomcat_dir }}/conf/tomcat-users.xml"
 
 - name: Allow access to Manager and Host Manager apps from any IP
   template:
-    src: context.xml.j2
+    src: templates/context.xml.j2
     dest: "{{ item }}"
   with_items:
     - "{{ tomcat_dir }}/webapps/host-manager/META-INF/context.xml"
     - "{{ tomcat_dir }}/webapps/manager/META-INF/context.xml"
-#-------------------------------------------------------------------------------#
-# 톰캣 시작 또는 중지
-  vars_prompt:
-   - name: select
-     prompt: 'startup or stop servers? [default: startup] '
-     private: no
-     default: 'startup'
-  tasks:
 
-  - name: '{{ select }} tasks starting'
-    shell: nohup './{{ select }}.sh'
-    args:
-      chdir: '{{ tomcat_dir }}/bin'
 
-  - debug:
-      msg:
-      - '{{ execute_result.stdout }}'
+- name: Start application
+  shell: "{{ tomcat_dir }}/bin/startup.sh"
+  args:
+  chdir: "/tmp"
+  executable: "/bin/bash"
+- name: Start Tomcat
+  command: "nohup {{ tomcat_dir }}/bin/startup.sh"
+  tags: starttom
+- name: Stop Tomcat
+  command: "nohup {{ tomcat_dir }}/bin/shutdown.sh"
+  tags: stoptom
