--- a/tomcat-setup.yml
+++ b/tomcat-setup.yml
@@ -11,5 +11,6 @@
     ui_admin_username: admin                    # User who can access bpth manager and admin UI sections
     ui_admin_pass: Str0ngAdminP@ssw3rd          # UI admin password
     tomcat_dir: /home/azureuser/instance01
+    remote_user: azureuser
   roles:
     - tomcat
