--- a/tomcat-setup.yml
+++ b/tomcat-setup.yml
@@ -1,6 +1,6 @@
 ---
 - name: Tomcat deployment playbook
-  hosts: tomcat-node      # Inventory hosts group / server to act on
+  hosts: "{{ hosts }}"      # Inventory hosts group / server to act on
   become: yes               # If to escalate privilege
   become_method: sudo       # Set become method
   remote_user:  azureuser        # Update username for remote server
