--- a/tomcat-setup.yml
+++ b/tomcat-setup.yml
@@ -1,9 +1,9 @@
 ---
 - name: Tomcat deployment playbook
   hosts: "{{ hosts }}"      # Inventory hosts group / server to act on
-  become: yes               # If to escalate privilege
-  become_method: sudo       # Set become method
-  remote_user:  azureuser        # Update username for remote server
+  # become: yes               # If to escalate privilege
+  # become_method: sudo       # Set become method
+  remote_user:  "{{ remote_user }}"         # Update username for remote server
   vars:
     tomcat_ver: 8.5.8                          # Tomcat version to install
     ui_manager_user: manager                    # User who can access the UI manager section only
