--- a/roles/tomcat/tasks/tomcat-setup-RedHat.yml
+++ b/roles/tomcat/tasks/tomcat-setup-RedHat.yml
@@ -35,6 +35,12 @@
     owner: "{{ remote_user }}"
     group: "{{ remote_user }}"
 
+- name: Create a source directory if it does not exist
+  file:
+    path: "/home/{{ remote_user }}/webapps"
+    state: directory
+    mode: '0755'
+
 - name: Extract tomcat archive
   unarchive:
     src: "{{ tomcat_archive_dest }}"
