--- a/roles/tomcat/tasks/tomcat-setup-RedHat.yml
+++ b/roles/tomcat/tasks/tomcat-setup-RedHat.yml
@@ -37,7 +37,7 @@
 
 - name: Create a source directory if it does not exist
   file:
-    path: "/home/{{ remote_user }}/webapps"
+    path: "{{ source_dir }}"
     state: directory
     mode: '0755'
 
