--- a/roles/tomcat/tasks/tomcat-setup-RedHat.yml
+++ b/roles/tomcat/tasks/tomcat-setup-RedHat.yml
@@ -51,6 +51,20 @@
     extra_opts: "--strip-components=1"
     creates: "{{ tomcat_dir }}/bin"
 
+- name: Copy tomcat service file
+  template:
+    src: templates/tomcat.service.j2
+    dest: "/etc/systemd/system/{{ instance }}.service"
+  when: ansible_service_mgr == "systemd"
+
+- name: Start and enable tomcat
+  service:
+    daemon_reload: yes
+    name: {{ instance }}
+    state: started
+    enabled: yes
+  when: ansible_service_mgr == "systemd"
+
 - name: Copy tomcat variable file setenv.sh
   template:
     src: templates/setenv.sh
